--- a/app.json
+++ b/app.json
@@ -10,6 +10,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "sdkVersion":"40.0.0",
     "updates": {
       "fallbackToCacheTimeout": 0
     },
