--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-av": "^9.1.2",
     "expo-linear-gradient": "^9.1.0",
     "expo-status-bar": "~1.0.4",
+    "firebase": "^8.6.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
